Fixing overflow

--- a/wp-content/themes/casinochecking.com/scss/global/_archive-casino.scss
+++ b/wp-content/themes/casinochecking.com/scss/global/_archive-casino.scss
@@ -1,5 +1,5 @@
 section {
-    .sticky-container {
+  .sticky-container {
     position: relative;
   }
 
@@ -78,6 +78,11 @@ section {
       padding-left: 4px;
       text-transform: uppercase;
       font-size: 11px;
+    }
+  }
+  @include breakpoint(small only) {
+    .selected-currency, .sorting{
+      width: 50%;
     }
   }
 
