--- a/wp-content/themes/casinochecking.com/scss/global/_containers.scss
+++ b/wp-content/themes/casinochecking.com/scss/global/_containers.scss
@@ -9,6 +9,10 @@
 .hide-custom {
 	display: none;
 }
+
+.hidden-overflow {
+	overflow: hidden;
+}
 @include breakpoint (medium up) {
 	.minus-row-margin {
 		margin-top: -25vh;
