--- a/wp-content/themes/casinochecking.com/scss/partials/_header.scss
+++ b/wp-content/themes/casinochecking.com/scss/partials/_header.scss
@@ -90,7 +90,7 @@ header.site-header {
     perspective: 1000px;
     lisst-style-type: none;
     li a {
-      font-size: 2rem;
+      font-size: 1.5rem;
       color: $light-gray;
     }
 
