--- a/wp-content/themes/casinochecking.com/style.css
+++ b/wp-content/themes/casinochecking.com/style.css
@@ -1909,6 +1909,8 @@ section .filter-wrapper p:first-child { padding-left: 0; }
 
 section .filter-wrapper p { padding-left: 4px; text-transform: uppercase; font-size: 11px; }
 
+@media screen and (max-width: 39.9375em) { section .selected-currency, section .sorting { width: 50%; } }
+
 @media screen and (min-width: 64em) { section .align-right { text-align: right; } }
 
 @media screen and (max-width: 63.9375em) { section .align-right { text-align: center; } }
@@ -1986,6 +1988,8 @@ section .casino-wrapper .user-rating h2 { line-height: inherit; }
 .container { padding-right: 15px; padding-left: 15px; margin-right: auto; margin-left: auto; max-width: 1000px; }
 
 .hide-custom { display: none; }
+
+.hidden-overflow { overflow: hidden; }
 
 @media screen and (min-width: 40em) { .minus-row-margin { margin-top: -25vh; } }
 
@@ -2173,7 +2177,7 @@ header.site-header.is-active #menu-mobile-header { display: block; }
 
 header.site-header #menu-mobile-header { width: 100%; text-align: center; display: none; margin: 0px; text-transform: uppercase; padding: 100px 20px 100px; perspective: 1000px; lisst-style-type: none; }
 
-header.site-header #menu-mobile-header li a { font-size: 2rem; color: #eee; }
+header.site-header #menu-mobile-header li a { font-size: 1.5rem; color: #eee; }
 
 header.site-header #menu-mobile-header li.current_page_item a { color: #f81c1e; }
 
@@ -2301,6 +2305,8 @@ header.site-header .menu-mobile-header-container { position: absolute; top: 0; h
 
 /*PARTS*/
 .button { background-color: #36d47d; border: none; color: #3f3e46; text-transform: uppercase; border-radius: 4px; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 11px; margin: 0; font-weight: 600; cursor: pointer; }
+
+@media screen and (max-width: 39.9375em) { .button { font-size: 10px; } }
 
 .button:hover { opacity: 0.9; }
 
